@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 27;
+use Test::More tests => 29;
 
 use Test::XML;
 
@@ -41,9 +41,10 @@ my @tests = (qw(
     with-span
     a-href-with-id-and-lang
     with-blockquote-with-lang-and-id
+    with-style-tag-at-start-of-paragraph
     ));
 
-# TEST:$num_texts=13
+# TEST:$num_texts=14
 
 my $grammar = XML::Grammar::Fiction::FromProto->new({
         parser_class => "XML::Grammar::Fiction::FromProto::Parser::QnD",
